
syntax = "proto3";

package sensateiot.router;
option csharp_namespace = "SensateIoT.Platform.Router.Contracts.DTO";

import "google/protobuf/timestamp.proto";

message ControlMessage {
	string SensorID = 1;
	string Data = 2;
	int32 Destination = 3;
	string Secret = 4;
	google.protobuf.Timestamp Timestamp = 5;
}

message ControlMessageData {
	repeated ControlMessage Messages = 1;
}
